Fri Mar  1 10:58:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (which_lib$(EXEEXT)): Compile $<, not
	which_lib.c.
	(user_home$(EXEEXT)): Idem.

2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: Port to MINGW

2002-02-28  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin5): Correct compile flags. Add
	flags to ignore MacOSX headers if FOUNDATION_LIB is gnu.
	(darwin1): Correct compile flags.
	(nextstep4): Likewise.
	(nextstep3): Likewise.

2002-02-28 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: setup variables to force particular paths for user
	and defaults roots.
	* config.make.in: pass configured forced paths on to build process
	* common.make: use path forcing.

Thu Feb 28 18:27:05 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Master/rules.make (PRINCIPAL_CLASS): Do not pass down
	to submakes.
	* Instance/application.make (PRINCIPAL_CLASS): Define in terms of
	$(GNUSTEP_INSTANCE)_PRINCIPAL_CLASS; do not use override when
	fixing it up if it's empty.
	* Instance/bundle.make (PRINCIPAL_CLASS): Idem.
	* Instance/framework.make (PRINCIPAL_CLASS): Idem.
	* Instance/gswbundle.make (PRINCIPAL_CLASS): Idem.
	* Instance/java-tool.make (PRINCIPAL_CLASS): Idem.
	* Instance/palette.make (PRINCIPAL_CLASS): Idem.
	* Instance/gswapp.make (PRINCIPAL_CLASS): Define.

Thu Feb 28 18:16:11 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/gswbundle.make (COMPONENTS, LANGUAGES,
	WEBSERVER_RESORCE_FILES, LOCALIZED_WEBSERVER_RESOURCE_FILES,
	WEBSERVER_RESORCE_DIRS, LOCALIZED_RESOURCE_DIRS, RESOURCE_FILES,
	RESOURCE_DIRS): Define here.

Thu Feb 28 15:22:31 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Instance/application.make: Simplified a lot by using
	Instance/Shared/bundle.make to copy resource files into the
	application bundle.

2002-02-28 Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: new utility to report users home directory.
	* configure.in: check for password file stuff etc.
	* GNUmakefile.in: build user_home