@@ -41,7 +41,9 @@ export GNUSTEP_MAKEFILES
 GNUSTEP_LOCAL_ROOT=@GNUSTEP_LOCAL_ROOT@
 GNUSTEP_NETWORK_ROOT=@GNUSTEP_NETWORK_ROOT@
 GNUSTEP_USER_ROOT=@GNUSTEP_USER_ROOT@
+FORCE_USER_ROOT=@FORCE_USER_ROOT@
 GNUSTEP_DEFAULTS_ROOT=@GNUSTEP_DEFAULTS_ROOT@
+FORCE_DEFAULTS_ROOT=@FORCE_DEFAULTS_ROOT@
 
 if [ ! -z "$WINDIR" ]; then
   GNUSTEP_USER_ROOT=`echo $GNUSTEP_USER_ROOT | tr '\\\' '/'`
