@@ -6,7 +6,8 @@ Fri Mar  1 10:58:58 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>
 
-	* user_home.c: Port to MINGW
+	* user_home.c: Port to MINGW.  Added functionality under unix
+	to report GNUSTEP_USER_ROOT and GNUSTEP_DEFAULTS_ROOT
 
 2002-02-28  Adam Fedor  <fedor@gnu.org>
 
